# squadrats2garmin

./:  __main__.py  .gitattributes  .gitignore  Makefile  README.md  README.pl-PL.md  generate-osm.py  kmlread.py  mkgmap-log.cfg  pyproject.toml  requirements.txt  squadrats2garmin.py  squadrats2garmin.sh  visited-squadrats.py
common/: config.py  geo.py  job.py  mkgmap.py  osm.py  poly.py  region.py  squadrats.py  tile.py  timer.py  util.py  zoom.py
config/: AD-Andorra.json  AL-Shqipëria.json  AT-Österreich.json  BA-Bosna-i-Hercegovina.json  BE-Belgium.json  BG-България.json  BY-Беларусь.json  CH-Switzerland.json  CZ-Česko.json  DE-Deutschland.json  DK-Danmark.json  EE-Eesti.json  ES-España.json  ES-spain.json  Europe-zoom-14.json  FI-Suomi.json  FR-France.json  FR-france.json  GB-United-Kingdom.json  GR-Ελλάς.json  HR-Hrvatska.json  HU-Magyarország.json  IE-Éire.json  IS-Ísland.json  IT-Italia.json  JP-Japan.json  LI-Liechtenstein.json  LT-Lietuva.json  LU-Luxembourg.json  LV-Latvija.json  MC-Monaco.json  MD-Moldova.json  ME-Crna-Gora.json  MK-Северна-Македонија.json  MT-Malta.json  NL-Nederland.json  NO-Norge.json  PL-Polska.json  PL-poland.json  PT-Portugal.json  (+16 more)
config/polygons/: README.md
config/polygons/europe/: AD-Andorra.poly  CZ-Česko.poly  LU-Luxembourg.poly  (+7 more)
docker/: Dockerfile  entrypoint.sh  mkgmap.sh
etc/: squadrats-default.style  squadrats.typ.txt
squadrats2osm/: Makefile  app.py  s2o.py  squadrats2osm.py
squadrats2osm/common/: id.py  job.py  osm.py  poly.py  region.py  squadrats.py  tile.py  timer.py  util.py  zoom.py
squadrats2osm/tests/: test_osm.py  test_poly.py  test_poly_coordinates.py  test_squadrats.py  test_tile.py  test_util.py
src/squadrats2garmin/: __init__.py  poly_download.py  squadrats2garmin.py  visited_squadrats.py
style/: squadrats-default.style
tests/: test_osm.py  test_poly.py  test_region.py  test_squadrats.py  test_tile.py  test_util.py  test_zoom.py
tests/config/: PL-Polska-single.json
tests/test_poly/: ES-CN-Canarias.geojson  PL-22-Pomorskie-11349.geojson  PL-22-Pomorskie.geojson  PL-22-Pomorskie.poly  PL-Poland-67097-points.geojson  PL-Poland-67097-points.poly  wrong_format.poly
typ/: squadrats.typ.txt
(+1011 files in other folders)
