[project]
name = "Squadrats2Garmin"
version = "0.2.0"
description = "Squadrats2Garmin project is a set of tools that improves the experience of _Squadrats_ collectors who use Garmin bike computers and smartwatches."
readme = "README.md"
authors = [
    { name = "Krystian Brazulewicz", email = "krystian@brazulewicz.pl" }
]
license = "GPL-3.0-only"
keywords = ["squadrats"]
requires-python = ">=3.14"
dependencies = [
    "fastkml>=1.4.0",
    "geojson>=3.2.0",
    "pycountry>=24.6.1",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[project.scripts]
visited = "squadrats2garmin:visited_squadrats"
grid = "squadrats2garmin:squadrats_grid"
poly = "squadrats2garmin:poly_download"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
poly = [
    "overpy>=0.7",
]
